--- a/app/src/main/res/layout/layout_post.xml
+++ b/app/src/main/res/layout/layout_post.xml
@@ -19,7 +19,7 @@
 
 
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
             android:layout_width="53dp"
             android:layout_height="53dp"
