comment added on home page
comment added to home screen
in detail screen recycler video have fix size now

--- a/app/src/main/res/layout/fragment_create_post_fragmnet.xml
+++ b/app/src/main/res/layout/fragment_create_post_fragmnet.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.postPackage.CreatePostFragment"
-    android:background="#243B55">
+    android:background="@drawable/chat_background">
     
     <LinearLayout
         android:layout_width="match_parent"
