--- a/app/src/main/res/layout/layout_side_menu.xml
+++ b/app/src/main/res/layout/layout_side_menu.xml
@@ -15,16 +15,15 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profileImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@color/black"
+            android:src="@drawable/ic_default_person"
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@color/black" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
         <TextView
