--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,8 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="3"
-        android:fillViewport="true"
-       >
+        android:fillViewport="true">
 
         <ImageView
             android:id="@+id/imageView5"
