--- a/app/src/main/res/layout/fragment_post_details.xml
+++ b/app/src/main/res/layout/fragment_post_details.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/chat_background"
-    android:fillViewport="true"
     android:paddingHorizontal="15dp"
     tools:context=".ui.postPackage.PostDetailsFragment">
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
@@ -159,45 +152,47 @@
                 app:layout_constraintTop_toTopOf="@+id/captionName"
                 tools:text="heelo bhai kese ho " />
 
-
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/commentRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/commentRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginVertical="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/commentText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/myImage"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:src="@drawable/ic_default_person"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/commentRecyclerView" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/myImage"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/ic_default_person"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/commentText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@null"
-            android:hint="enter a comment "
-            android:inputType="textMultiLine"
-            android:maxLines="5"
-            android:padding="5dp"
-            android:scrollbars="vertical"
-            android:textColor="#CDC9C9"
-            android:textColorHint="@color/grey"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/myImage"
-            app:layout_constraintEnd_toStartOf="@+id/addComment"
-            app:layout_constraintStart_toEndOf="@+id/myImage"
-            app:layout_constraintTop_toTopOf="@+id/myImage"
-            tools:text="Add a comment here..." />
+    <EditText
+        android:id="@+id/commentText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+
+        android:background="@null"
+        android:hint="enter a comment "
+        android:inputType="textMultiLine"
+        android:maxLines="5"
+        android:padding="5dp"
+        android:scrollbars="vertical"
+        android:textColor="#CDC9C9"
+        android:textColorHint="@color/grey"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/addComment"
+        app:layout_constraintStart_toEndOf="@+id/myImage"
+        app:layout_constraintTop_toTopOf="@+id/myImage"
+        tools:text="Add a comment here..." />
 
         <ImageView
             android:id="@+id/addComment"
@@ -210,4 +205,3 @@
             app:tint="@color/white" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
