--- a/app/src/main/res/layout/layout_comments.xml
+++ b/app/src/main/res/layout/layout_comments.xml
@@ -16,20 +16,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/personName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/inter_semibold"
+        android:textColor="@color/white"
+        android:textSize="14dp"
+        android:layout_marginStart="@dimen/_5sdp"
+        app:layout_constraintStart_toStartOf="@+id/commentText"
+        app:layout_constraintTop_toTopOf="@+id/myImage" />
+
+
+    <TextView
         android:id="@+id/commentText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:background="@null"
         android:padding="5dp"
         android:textColor="#CDC9C9"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/myImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/myImage"
-        app:layout_constraintTop_toTopOf="@+id/myImage"
+        app:layout_constraintTop_toBottomOf="@+id/personName"
         tools:text="Add a comment here..." />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
