--- a/app/src/main/res/xml/fragment_profile_details_scene.xml
+++ b/app/src/main/res/xml/fragment_profile_details_scene.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:motion="http://schemas.android.com/apk/res-auto">
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:motion="http://schemas.android.com/apk/res-auto"
+   >
 
-    <Transition
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
-        motion:duration="1000">
-       <KeyFrameSet>
-       </KeyFrameSet>
-        <OnSwipe motion:maxAcceleration="49.08" />
-    </Transition>
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
@@ -19,7 +11,9 @@
             android:layout_height="300dp"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:transitionEasing="cubic(0.13,0.57,0.8,0.8)" />
+            motion:transitionEasing="cubic(0,0.38,0.11,0)">
+
+        </Constraint>
         <Constraint
             android:id="@+id/personImageCircle"
             motion:layout_constraintStart_toEndOf="@+id/backBtn"
@@ -31,29 +25,27 @@
 
     </ConstraintSet>
 
+
+
     <ConstraintSet android:id="@+id/end">
         <Constraint
             android:id="@+id/personImageSquare"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintStart_toStartOf="parent" />
-        <Constraint
-            android:id="@+id/personImageCircle"
             motion:layout_constraintStart_toEndOf="@+id/backBtn"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             motion:layout_constraintBottom_toBottomOf="@+id/backBtn"
             android:layout_marginStart="20dp"
-            motion:layout_constraintTop_toTopOf="@+id/backBtn" />
+            motion:layout_constraintTop_toTopOf="@+id/backBtn" >
+
+
+        </Constraint>
         <Constraint
             android:id="@+id/personName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            motion:layout_constraintBottom_toBottomOf="@id/personImageCircle"
-            motion:layout_constraintTop_toTopOf="@id/personImageCircle"
-            motion:layout_constraintStart_toEndOf="@id/personImageCircle"
+            motion:layout_constraintBottom_toBottomOf="@id/personImageSquare"
+            motion:layout_constraintTop_toTopOf="@id/personImageSquare"
+            motion:layout_constraintStart_toEndOf="@id/personImageSquare"
             android:layout_marginStart="10dp" />
         <Constraint
             android:id="@+id/onlineStatus"
@@ -66,7 +58,7 @@
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            motion:layout_constraintTop_toBottomOf="@id/personImageCircle"
+            motion:layout_constraintTop_toBottomOf="@id/personImageSquare"
             motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/postRecyclerView"
@@ -77,4 +69,23 @@
             motion:layout_constraintTop_toBottomOf="@+id/linearLayout4"
             motion:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
-</MotionScene>
+
+    <Transition
+        motion:duration="2000"
+        motion:constraintSetStart="@id/start"
+        motion:constraintSetEnd="@+id/end">
+        <OnSwipe
+            motion:dragDirection="dragUp"
+            motion:dragScale="1"
+            motion:moveWhenScrollAtTop="true"
+            motion:onTouchUp="stop"
+            motion:touchAnchorSide="top"
+            motion:touchAnchorId="@id/linearLayout4"
+            />
+
+
+
+</Transition>
+
+
+    </MotionScene>
