person profile activity done
profile project done

--- a/app/src/main/res/layout/layout_side_menu.xml
+++ b/app/src/main/res/layout/layout_side_menu.xml
@@ -69,7 +69,7 @@
 
             <ImageView
                 style="@style/sideMenuImage"
-                android:src="@color/black"
+                android:src="@drawable/ic_person_pic"
                 />
 
             <TextView
