--- a/app/src/main/res/layout/layout_post.xml
+++ b/app/src/main/res/layout/layout_post.xml
@@ -127,6 +127,17 @@
             app:layout_constraintStart_toEndOf="@+id/likeButton"
             app:layout_constraintTop_toTopOf="@+id/likeButton" />
 
+        <ImageView
+            android:id="@+id/bookmarkedButton"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/fav_unlike"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/user_image_post_container" />
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/commentBox"
             android:layout_width="match_parent"
