--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -123,6 +123,10 @@
         android:id="@+id/savedPostFragment"
         android:name="com.example.socialmediaapplicaition.ui.sideMenuPackage.SavedPostFragment"
         android:label="fragment_saved_post"
-        tools:layout="@layout/fragment_saved_post" />
+        tools:layout="@layout/fragment_saved_post" >
+        <action
+            android:id="@+id/action_savedPostFragment_to_postDetailsFragment"
+            app:destination="@id/postDetailsFragment" />
+    </fragment>
 
 </navigation>
